# Dreamcodec

./: package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/ffmpeg/: mod.rs
src-tauri/src/gpu/: mod.rs
src/components/: GpuInfo.tsx  Settings.tsx
src/types/: index.ts
