[package]
name = "dreamcodec"
version = "2.2.7"
description = "GPU-accelerated video converter built with Tauri"
authors = ["Thornvald"]
edition = "2021"

[lib]
name = "video_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.5.6", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
reqwest = { version = "0.12", features = ["stream"] }
zip = "2"
tokio-util = { version = "0.7", features = ["io"] }
dirs = "5"
futures = "0.3"
log = "0.4"
log4rs = "1.2"
thiserror = "1.0"
anyhow = "1.0"

[dependencies.uuid]
version = "1"
features = ["v4"]
